# url-checker

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  main.go
pkg/checker/: BUILD.bazel  checker.go
