load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "library",
    srcs = ["main.go"],
    importpath = "github.com/rususlasan/url-checker",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/checker:pkg_checker_library",
    ],
)

go_binary(
    name = "url-checker",
    embed = [":library"],
    visibility = ["//visibility:public"],
)