load("@bazel_tools//tools/build_rules:go/def.bzl", "go_prefix", "go_library")

#go_prefix("github.com/rususlasan/url-checker/pkg/checker")

go_library(
    name = "go_default_library",
    srcs = [ "checker.go" ],
    importpath = "github.com/rususlasan/url-checker/pkg/checker",
    visibility = ["//visibility:public"],
)